# breviary

./: Makefile.am  bcpoffce.txt  calendar.py  configure.ac
breviary/: breviary-build-db.c  calendar.c  calendar.h
data/: calendar.db.txt  calendar.xml  matins-i.xml
tests/: advent-sunday.test.txt  easter.test.txt  sundays.test.txt
